--- a/css/sectionPageFooter.css
+++ b/css/sectionPageFooter.css
@@ -15,6 +15,9 @@
     font-size: 12px;
     line-height: normal;
     opacity: 0.3;
+    
+    background-color: var(--page-background-color);
+
 }
 
 .css-footer-link {
