Minor CSS fixes

--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,7 @@ body {
 .css-page {
     /* position */
     position: relative;
-    height: calc(100vh);
+    min-height: calc(100vh);
     transform-origin: 0 0;
     transform: scale(1);
     /* overflow-y: hidden; */
