--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
 @import "myToogle.css";
 @import "myButton.css";
 @import "mySlider.css";
+@import "mySwitch.css";
 
 /* PAGE */
 @import "sectionPageTop.css";
