--- a/css/myFramework.css
+++ b/css/myFramework.css
@@ -3,6 +3,16 @@
 /* CUSTOM CSS FRAMEWORK */
 /* ==================== */
 
+*,
+*::before,
+*::after {
+    margin: 0;
+    padding: 0;
+    border: none;
+    box-sizing: border-box; /* To make sure padding doesn't increase the overall width */
+}
+
+
 .temp {
     border: solid green 1px;
 }
@@ -25,6 +35,13 @@
     width: 100%;
     text-decoration: none;
 }
+.fill-parent {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 .center {
     margin-left: auto;
     margin-right: auto;
@@ -44,7 +61,11 @@
 }
 
 
-/* GUIDE TO FLEX : https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
+/* 
+    FLEX
+    - https://css-tricks.com/snippets/css/a-guide-to-flexbox/
+    - https://www.joshwcomeau.com/css/interactive-guide-to-flexbox/
+*/
 .flex-row {
     display: flex;
     flex-direction: row;
