--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ body {
     font-style: normal;
     font-weight: 400;
 
-    height: 100%;
+    height: 100dvh;
     background-color: var(--body-background-color);
 }
 
