--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@
 
 :root {
     --body-background-color: #ffffff;
-    --page-background-color: #e7e9eb;
+    --page-background-color: #eaecee;
     --radius-ref: 300px;
     --window-max-width: 500px;
 }
