--- a/css/sectionPageMiddle.css
+++ b/css/sectionPageMiddle.css
@@ -1,7 +1,7 @@
 .css-middle-section {
     /* outside */
     flex-shrink: 0;
-    height: calc(100dvh - 330px);
+    height: calc(100svh - 330px);
     margin: 15px;
     padding: 10px;
 
